--- a/home.html
+++ b/home.html
@@ -12,7 +12,16 @@
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" ></script>
+    <header class="container-fluid py-2 shadow-lg">
+        <div class="container">
+            <div class="row">
+                <figure class="col-lg-6 mb-0 pb-0">
+                    <img src="images/logo.svg" alt="" class="img-fluid">
+                </figure>
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </header>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" ></script>
 </html>
